# translate-platform-api

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Compose.yml  Dockerfile  Makefile.toml  README.md  diesel.toml  log4rs.yaml  nginx.conf  reboot.sh
database/pdmaner/: test_user.csv  空荧翻译平台.pdma.json
database/pdmaner/.version_空荧翻译平台/: v1.0.0.json
docker/: .env.example  .gitignore  Makefile.toml
docker/makefile/: banner.txt  project_name.txt
docker/util/: env.ds  help.ds  index.ds  string.ds
docker/util/docker/: docker_build.ds  docker_down.ds  docker_up.ds  index.ds
docker/util/env/: check_env_file.ds  get_env_map.ds  get_env_var_map.ds  index.ds  prepare_env_vars.ds  replace_env_vals.ds  replace_env_vals_in_file.ds
docker/util/help/: get_cmd_input.ds  get_help_cmds.ds  index.ds  print_banner.ds  print_env_path.ds  print_help_cmds.ds
docker/util/logger/: echo_label.ds  index.ds  log_error.ds
docker/util/string/: index.ds  str_repeat.ds
migration/: .gitignore  Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: V1__sys_user.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: creat_table.rs  create_table.rs  database.rs  error.rs  main.rs  schema.rs  tests.rs  user.rs
src/entity/: mod.rs  sys_user.rs
src/user/: jwt.rs  login.rs  mod.rs  register.rs
