[package]
name = "translate-platform-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
actix-web = "4.8.0"
tokio-postgres = "0.7.10"
serde = "1.0.203"
deadpool-postgres = "0.14.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
actix-web-lab = "0.20.2"
isolang = { version = "2.4.0", features = [
    "local_names",
    "serde",
    "lowercase_names",
] }
refinery = { version = "0.8.14", features = ["tokio-postgres", "postgres"] }
