[package]
name = "translate-platform-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }


[dependencies]
# 基础服务
log = "0.4.21"
serde = "1.0.203"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }

# 网络相关
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
jsonwebtoken = "9.3.0"

# 数据库相关
sea-orm = { version = "0.12.15", features = [
    "debug-print",
    "mock",
    "runtime-actix",
    "sqlx-postgres",
] }
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
migration = { path = "migration" }

# 业务功能
isolang = { version = "2.4.0", features = ["serde"] }
bcrypt = "0.15.1"
